e2e/agic/multinamespace/input/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
  namespace: second-namespace
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: contoso.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: contoso-2-service
                port:
                  number: 80
            pathType: Exact
